# lambda-stack

./: .gitignore  Cargo.toml  Lambda_Lib.http  config.toml  justfile  rust-toolchain.toml
.cargo/: config.toml
lambda-auth/: Cargo.toml
lambda-auth/crates/gen-keys/: Cargo.toml
lambda-auth/crates/gen-keys/src/: args.rs  main.rs
lambda-auth/crates/init-server/: Cargo.toml
lambda-auth/crates/init-server/src/: args.rs  main.rs
lambda-auth/crates/init-server/src/sql/: initialize.sql
lambda-auth/crates/login-helper/: Cargo.toml
lambda-auth/crates/login-helper/src/: args.rs  main.rs
lambda-auth/crates/server/: Cargo.toml
lambda-auth/crates/server/src/: args.rs  main.rs
lambda-auth/crates/server/src/login/: conclude.rs  initiate.rs
lambda-auth/crates/server/src/password_change/: conclude.rs  initiate.rs  mod.rs
lambda-auth/crates/server/src/registration/: conclude.rs  initiate.rs
lambda-auth/crates/server/src/registration/sql/: check_user_exists.sql
lambda-auth/sql/: fetch_password_file.sql  upload_password_file.sql
lambda-auth/src/: lib.rs  login.rs  password_change.rs  registration.rs  state.rs
lambda-auth/src/middleware/: internals.rs  mod.rs
lambda-lib/: Cargo.toml
lambda-lib/src/: lib.rs
lambda-sdk/lambda-rt/: Cargo.toml
lambda-sdk/lambda-rt/src/: lib.rs
lambda-sdk/lambda-rt/src/sdk_rt/: context.rs  debug.rs  io.rs  mod.rs  net.rs  panic.rs  vault.rs
lambda-sdk/lambda-sdk/: Cargo.toml
lambda-sdk/lambda-sdk/src/: entry.rs  interops.rs  lib.rs
lambda-sdk/lambda-sdk/src/context/: external.rs  mod.rs
lambda-sdk/lambda-sdk/src/debug/: external.rs  mod.rs
lambda-sdk/lambda-sdk/src/io/: external.rs  mod.rs
lambda-sdk/lambda-sdk/src/net/: external.rs  mod.rs
lambda-sdk/lambda-sdk/src/panic/: external.rs  mod.rs
lambda-sdk/lambda-sdk/src/vault/: external.rs  mod.rs
lambda-web/crates/init/: Cargo.toml
lambda-web/crates/init/sql/: initialize.sql
lambda-web/crates/init/src/: args.rs  main.rs
lambda-web/crates/server/: Cargo.toml
lambda-web/crates/server/src/: args.rs  config.rs  main.rs
lambda-web/crates/server/src/service/: mod.rs  modules.rs  workers.rs
lambda-web/crates/server/src/vault/: mod.rs
lambda-web/crates/server/src/vault/sql/: fetch_secret.sql
