[package]
name = "lambda-rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.anyhow]
workspace = true

[dependencies.reqwest]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.tokio]
workspace = true
features = ["rt"]

[dependencies.wasmtime]
workspace = true
features = ["async"]

[dependencies.zeroize]
workspace = true
