[package]
name = "lambda-auth-gen-keys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.anyhow]
workspace = true

[dependencies.clap]
workspace = true

[dependencies.ed25519-dalek]
workspace = true
features = ["std", "rand_core"]

[dependencies.lambda-auth]
workspace = true

[dependencies.opaque-ke]
workspace = true

[dependencies.postcard]
workspace = true

[dependencies.rand]
workspace = true

[dependencies.zeroize]
workspace = true
