[package]
name = "lambda-web-init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.anyhow]
workspace = true

[dependencies.clap]
workspace = true

[dependencies.postcard]
workspace = true

[dependencies.sqlx]
workspace = true

[dependencies.tokio]
workspace = true
features = ["rt"]
